[gd_scene load_steps=2 format=3 uid="uid://b3ngu66fpsk6y"]

[ext_resource type="Script" path="res://order_card.gd" id="1_32d3l"]

[node name="OrderCard" type="Panel"]
offset_right = 230.0
offset_bottom = 230.0
script = ExtResource("1_32d3l")
layer_count = 3

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 106.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 25
text = "Order"

[node name="Label1" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 106.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 20
text = "Layers"

[node name="LayersLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 60.0
offset_right = 210.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 20
text = "3"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 110.0
offset_right = 112.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 20
text = "Reward"

[node name="RewardLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 110.0
offset_right = 210.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 20
text = "$0"
horizontal_alignment = 2

[node name="AcceptButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 160.0
offset_right = 210.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 20
text = "Accept"
